--- a/its-alive.html
+++ b/its-alive.html
@@ -27,6 +27,7 @@
 </header>
 <article>
     <p>So, that wasn't so hard. Pulled the trigger today on this jimperio.com domain.</p>
+<p>Currently using <a href="http://github.com/getpelican/pelican">Pelican</a>, and hosting the static output on <a href="http://pages.github.com">GitHub Pages</a>.</p>
 <p>We'll see what we can make of this. Quite obviously, this website is still under construction: expect more content (and even more tweaking) in the coming weeks.</p>
 </article>
 
