Added link to blog source repo.

--- a/its-alive.html
+++ b/its-alive.html
@@ -27,7 +27,7 @@
 </header>
 <article>
     <p>So, that wasn't so hard. Pulled the trigger today on this jimperio.com domain.</p>
-<p>Currently using <a href="http://github.com/getpelican/pelican">Pelican</a>, and hosting the static output on <a href="http://pages.github.com">GitHub Pages</a>.</p>
+<p>Currently using <a href="http://github.com/getpelican/pelican">Pelican</a>, and hosting the static output on <a href="http://pages.github.com">GitHub Pages</a>. The source for this blog is also on <a href="https://github.com/jimperio/jimperio.blog">GitHub</a>.</p>
 <p>We'll see what we can make of this. Quite obviously, this website is still under construction: expect more content (and even more tweaking) in the coming weeks.</p>
 </article>
 
