Minor about page copy change.

--- a/about.html
+++ b/about.html
@@ -25,7 +25,7 @@
         <span id="page-title">about</span></h1>
 </header>
 <article>    
-    <p>Hello, my name is Jomel Imperio. I read and write prose and poetry and code.</p>
+    <p>Hello, my name is Jomel Imperio. I read and write code and poetry and prose.</p>
 <p>Feel free to <a href="http://twitter.com/jimperio">tweet</a> or <a href="mailto:j@jimperio.com">email</a> me if anything on this site interests you! (Or if you just want to talk, that'd be cool, too.)</p>
 </article>
 
