Added 'latest' footer link, and modified 'about' page copy to say a little about the nature of the site.

--- a/anathem-and-the-appeal-of-the-academe.html
+++ b/anathem-and-the-appeal-of-the-academe.html
@@ -37,6 +37,7 @@
         <footer>
             <nav>
                 <ul>
+                    <li><a href=".">latest</a> ::</li>
                                     <li><a href="./about.html">about</a></li>
                                                                     <li>:: <a href="mailto:j@jimperio.com">email</a></li>
                 </ul>
