--- a/about.html
+++ b/about.html
@@ -26,12 +26,14 @@
 </header>
 <article>    
     <p>Hello, my name is Jomel Imperio. I read and write code and poetry and prose.</p>
-<p>Feel free to <a href="http://twitter.com/jimperio">tweet</a> or <a href="mailto:j@jimperio.com">email</a> me if anything on this site interests you! (Or if you just want to talk, that'd be cool, too.)</p>
+<p>This site will mostly be a centralized place for me to put up blog entries, short musings, code snippets, poems, and other such output. Effort will be made to always be interesting, but there will be no promises regarding accuracy or thoroughness!</p>
+<p>Feel free to <a href="http://twitter.com/jimperio">tweet</a> or <a href="mailto:j@jimperio.com">email</a> me if anything here interests you! (Or if you just want to talk, that'd be cool, too.)</p>
 </article>
 
         <footer>
             <nav>
                 <ul>
+                    <li><a href=".">latest</a> ::</li>
                                     <li><a href="./about.html">about</a></li>
                                                                     <li>:: <a href="mailto:j@jimperio.com">email</a></li>
                 </ul>
