Added an entry: Rationale.

--- a/archives.html
+++ b/archives.html
@@ -22,6 +22,8 @@
         <h1>Archives for momeng</h1>
 
 <dl>
+    <dt>Thu 18 April 2013</dt>
+    <dd><a href="./rationale.html">Rationale</a></dd>
     <dt>Mon 15 April 2013</dt>
     <dd><a href="./anathem-and-the-appeal-of-the-academe.html">Anathem and the appeal of the academe</a></dd>
     <dt>Fri 12 April 2013</dt>
