--- a/archives.html
+++ b/archives.html
@@ -22,6 +22,8 @@
         <h1>Archives for momeng</h1>
 
 <dl>
+    <dt>Fri 19 April 2013</dt>
+    <dd><a href="./the-secret-to-poetry.html">The secret to poetry</a></dd>
     <dt>Thu 18 April 2013</dt>
     <dd><a href="./rationale.html">Rationale</a></dd>
     <dt>Mon 15 April 2013</dt>
