Changed entry title.

--- a/archives.html
+++ b/archives.html
@@ -23,7 +23,7 @@
 
 <dl>
     <dt>Fri 19 April 2013</dt>
-    <dd><a href="./the-secret-to-poetry.html">The secret to poetry</a></dd>
+    <dd><a href="./the-secret-to-writing-poetry.html">The secret to writing poetry</a></dd>
     <dt>Thu 18 April 2013</dt>
     <dd><a href="./rationale.html">Rationale</a></dd>
     <dt>Mon 15 April 2013</dt>
