--- a/archives.html
+++ b/archives.html
@@ -22,6 +22,8 @@
         <h1>Archives for momeng</h1>
 
 <dl>
+    <dt>Fri 27 September 2013</dt>
+    <dd><a href="./island-vacation.html">Island Vacation</a></dd>
     <dt>Fri 19 April 2013</dt>
     <dd><a href="./the-secret-to-writing-poetry.html">The secret to writing poetry</a></dd>
     <dt>Thu 18 April 2013</dt>
