Fixed line breaks.

--- a/island-vacation.html
+++ b/island-vacation.html
@@ -27,71 +27,71 @@
 </header>
 <article>
     <p>Part 1 (2012)</p>
-<p>It rained again today.
-Sand's less white than beige
-and not quite fine
-but still I felt the quivering
-of the spaces between my fingers.
-I walked as slowly as memory-
-you and me once did
-on that rainy beach more beautiful than this.</p>
-<p>Now it's too quiet.
-Across this ocean pretending to be a lake
-another island where you are not
-unrolls along the horizon.
-Glassy gray reflects bright blue.
-Fellow travelers slice dark lines across the water
-that, like them, disappear.
-And what about these, my lines for you?</p>
-<p>What about the curve of you
-once right next to, once touching me?
-Just another skein of rain from sky to sea?
-What of our once-parallel trajectories,
-the sharing of presents and histories
-in effortless communion?
-The same saltwater may lap at all beaches
-but will our footsteps again follow the same shore?</p>
-<p>Here's another dispatch from where I am
-to where you are. When you open this,
-remember my lips against your forehead.
-Remember the nearness of my smile
-and the soft clarity of my voice beside your ear
-and know that I think of you always.
-Know that though my lines may sometimes bend
-they always - will always - reach for you.</p>
+<p>It rained again today.<br />
+Sand's less white than beige<br />
+and not quite fine<br />
+but still I felt the quivering<br />
+of the spaces between my fingers.<br />
+I walked as slowly as memory-<br />
+you and me once did<br />
+on that rainy beach more beautiful than this.  </p>
+<p>Now it's too quiet.<br />
+Across this ocean pretending to be a lake<br />
+another island where you are not<br />
+unrolls along the horizon.<br />
+Glassy gray reflects bright blue.<br />
+Fellow travelers slice dark lines across the water<br />
+that, like them, disappear.<br />
+And what about these, my lines for you?  </p>
+<p>What about the curve of you<br />
+once right next to, once touching me?<br />
+Just another skein of rain from sky to sea?<br />
+What of our once-parallel trajectories,<br />
+the sharing of presents and histories<br />
+in effortless communion?<br />
+The same saltwater may lap at all beaches<br />
+but will our footsteps again follow the same shore?  </p>
+<p>Here's another dispatch from where I am<br />
+to where you are. When you open this,<br />
+remember my lips against your forehead.<br />
+Remember the nearness of my smile<br />
+and the soft clarity of my voice beside your ear<br />
+and know that I think of you always.<br />
+Know that though my lines may sometimes bend<br />
+they always - will always - reach for you.  </p>
 <p>Part 2 (2013)</p>
-<p>Here where they drive on the wrong side
-with their rented motorbikes
-I pedal myself to and fro.
-Here where we all walk like intruders,
-dress with fashionable disregard,
-and dance until moonset
-as if trying to close the gap
-between ourselves and ourselves.</p>
-<p>Here where the food is fresh and sweet and spicy.
-Here where the rain never lasts for long.
-Here where good cheer seems mandatory.
-Here where the parties last forever.
-Here where perception is easy to alter,
-memory easier to lose,
-and easiest of all to fall
-into the unbroken horizon.</p>
-<p>Here where like locusts in a frenzy
-they swarm and use themselves up
-leaving behind only silent husks,
-here where you touch each other briefly
-and without care,
-here where we are all far from where we should be.
-Here where none of this even matters;
-not until it's time to go back home.</p>
-<p>Here where barely anyone speaks my language
-I came to find my voice,
-but the quietness of the day defeats me
-so I sit and let the sound engulf me
-and a stillness hold me in place.
-Here where they come to lose themselves
-I came not to find myself, exactly,
-but just what holds everything together.</p>
+<p>Here where they drive on the wrong side<br />
+with their rented motorbikes<br />
+I pedal myself to and fro.<br />
+Here where we all walk like intruders,<br />
+dress with fashionable disregard,<br />
+and dance until moonset<br />
+as if trying to close the gap<br />
+between ourselves and ourselves.  </p>
+<p>Here where the food is fresh and sweet and spicy.<br />
+Here where the rain never lasts for long.<br />
+Here where good cheer seems mandatory.<br />
+Here where the parties last forever.<br />
+Here where perception is easy to alter,<br />
+memory easier to lose,<br />
+and easiest of all to fall<br />
+into the unbroken horizon.  </p>
+<p>Here where like locusts in a frenzy<br />
+they swarm and use themselves up<br />
+leaving behind only silent husks,<br />
+here where you touch each other briefly<br />
+and without care,<br />
+here where we are all far from where we should be.<br />
+Here where none of this even matters;<br />
+not until it's time to go back home.  </p>
+<p>Here where barely anyone speaks my language<br />
+I came to find my voice,<br />
+but the quietness of the day defeats me<br />
+so I sit and let the sound engulf me<br />
+and a stillness hold me in place.<br />
+Here where they come to lose themselves<br />
+I came not to find myself, exactly,<br />
+but just what holds everything together.  </p>
 </article>
 
         <footer>
