--- a/its-alive.html
+++ b/its-alive.html
@@ -36,7 +36,7 @@
                 <ul>
                     <li><a href=".">latest</a> ::</li>
                                     <li><a href="./about.html">about</a></li>
-                                                                    <li>:: <a href="mailto:j@jimperio.com">email</a></li>
+                                                                    <li>:: <a href="mailto:jimperio@gmail.com">email</a></li>
                 </ul>
             </nav>
         </footer>
