--- a/archives.html
+++ b/archives.html
@@ -22,6 +22,8 @@
         <h1>Archives for momeng</h1>
 
 <dl>
+    <dt>Wed 28 January 2015</dt>
+    <dd><a href="./hello-again-world.html">Hello (again), world</a></dd>
     <dt>Fri 27 September 2013</dt>
     <dd><a href="./island-vacation.html">Island Vacation</a></dd>
     <dt>Fri 19 April 2013</dt>
