--- a/hello-again-world.html
+++ b/hello-again-world.html
@@ -35,7 +35,7 @@
 <li>Learn to swim</li>
 <li>Write and blog regularly</li>
 </ul>
-<p>I need to remember: it's just about continuing to move forward, bit by bit, every day.</p>
+<p>I need to remember: it's just about continuing to move forward, bit by bit, every day!</p>
 </article>
 
         <footer>
