Add an entry again, finally

--- a/authors.html
+++ b/authors.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-        <title>momeng</title>
+        <title>momeng - Authors</title>
         <meta charset="utf-8" />
         <link rel="stylesheet" href="http://jimperio.com/theme/css/main.css" type="text/css" />
         <link href="http://jimperio.com/" type="application/atom+xml" rel="alternate" title="momeng ATOM Feed" />
@@ -19,26 +19,10 @@
 </head>
 
 <body>
-<h1>Archives for momeng</h1>
+    <h1>Authors on momeng</h1>
 
-<dl>
-    <dt>Wed 13 May 2015</dt>
-    <dd><a href="http://jimperio.com/housekeeping.html">Housekeeping</a></dd>
-    <dt>Wed 28 January 2015</dt>
-    <dd><a href="http://jimperio.com/hello-again-world.html">Hello (again), world</a></dd>
-    <dt>Fri 27 September 2013</dt>
-    <dd><a href="http://jimperio.com/island-vacation.html">Island Vacation</a></dd>
-    <dt>Fri 19 April 2013</dt>
-    <dd><a href="http://jimperio.com/the-secret-to-writing-poetry.html">The secret to writing poetry</a></dd>
-    <dt>Thu 18 April 2013</dt>
-    <dd><a href="http://jimperio.com/rationale.html">Rationale</a></dd>
-    <dt>Mon 15 April 2013</dt>
-    <dd><a href="http://jimperio.com/anathem-and-the-appeal-of-the-academe.html">Anathem and the appeal of the academe</a></dd>
-    <dt>Fri 12 April 2013</dt>
-    <dd><a href="http://jimperio.com/setting-up-a-workflow.html">Setting up a workflow</a></dd>
-    <dt>Thu 11 April 2013</dt>
-    <dd><a href="http://jimperio.com/its-alive.html">It's alive!</a></dd>
-</dl>
+    <ul>        <li><a href="http://jimperio.com/author/jomel-imperio.html">Jomel Imperio</a> (8)</li>
+    </ul>
 
         <footer>
             <nav>
