--- a/tags.html
+++ b/tags.html
@@ -3,31 +3,31 @@
 <head>
         <title>momeng</title>
         <meta charset="utf-8" />
-        <link rel="stylesheet" href="./theme/css/main.css" type="text/css" />
-        <link href="./" type="application/atom+xml" rel="alternate" title="momeng ATOM Feed" />
-        
+        <link rel="stylesheet" href="http://jimperio.com/theme/css/main.css" type="text/css" />
+        <link href="http://jimperio.com/" type="application/atom+xml" rel="alternate" title="momeng ATOM Feed" />
+
         <!--[if IE]>
                 <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
 
         <!--[if lte IE 7]>
-                <link rel="stylesheet" type="text/css" media="all" href="./css/ie.css"/>
-                <script src="./js/IE8.js" type="text/javascript"></script><![endif]-->
+                <link rel="stylesheet" type="text/css" media="all" href="http://jimperio.com/css/ie.css"/>
+                <script src="http://jimperio.com/js/IE8.js" type="text/javascript"></script><![endif]-->
 
         <!--[if lt IE 7]>
-                <link rel="stylesheet" type="text/css" media="all" href="./css/ie6.css"/><![endif]-->
+                <link rel="stylesheet" type="text/css" media="all" href="http://jimperio.com/css/ie6.css"/><![endif]-->
 
 </head>
 
 <body>
-        <ul>
+<ul>
 </ul>
 
         <footer>
             <nav>
                 <ul>
-                    <li><a href=".">latest</a> ::</li>
-                                    <li><a href="./about.html">about</a></li>
-                                                                    <li>:: <a href="mailto:jimperio@gmail.com">email</a></li>
+                    <li><a href="http://jimperio.com">latest</a> ::</li>
+                    <li><a href="http://jimperio.com/about.html">about</a></li>
+                    <li>:: <a href="mailto:jimperio@gmail.com">email</a></li>
                 </ul>
             </nav>
         </footer>
